BUG#21173: SHOW TABLE STATUS crashes on InnoDB tables Don't use get_auto_increment on tables without auto_increment fields

mysql-test/r/partition.result:
  new test case
mysql-test/t/partition.test:
  new test case
sql/ha_partition.cc:
  Don't use get_auto_increment on tables without auto_increment fields